name:                pitch-extractor
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/pitch-extractor#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     PitchExtractor
                     , YouTubeDownloader
                     , CalculatePitchLocation
  build-depends:       base >= 4.7 && < 5
                     , pitchtrack
                     , process
                     , filepath
                     , directory >= 1.2.5.0
                     , containers
                     , wreq
                     , lens
                     , lens-aeson
                     , aeson
                     , text
                     , bytestring

  default-language:    Haskell2010
  default-extensions:  OverloadedStrings

executable pitch-extractor-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , pitch-extractor
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings

test-suite pitch-extractor-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , pitch-extractor
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings

source-repository head
  type:     git
  location: https://github.com/githubuser/pitch-extractor
