name:                pitch-extractor
version:             0.1.0.0
synopsis:            Splice/index musical pitches found in media.
description:         Please see README.md
homepage:            https://github.com/dpren/pitch-extractor#readme
license:             MIT
license-file:        LICENSE
author:              Darren Prentice
maintainer:          prenticedarren@gmail.com
category:            Sound
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     PitchExtractor
                     , GetYinPitches
                     , YouTubeDownloader
                     , CalculatePitchLocation
                     , Utils.MediaConversion
                     , Utils.Misc
  build-depends:       base >= 4.7 && < 5
                     , wreq
                     , lens
                     , lens-aeson
                     , aeson
                     , text
                     , text-show
                     , bytestring
                     , split
                     , containers
                     , system-filepath
                     , turtle
                     , foldl

  default-language:    Haskell2010
  default-extensions:  OverloadedStrings

executable pitch-extractor-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , pitch-extractor
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings

test-suite pitch-extractor-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , pitch-extractor
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings

source-repository head
  type:     git
  location: https://github.com/dpren/pitch-extractor
